Initial commit of AtlasVenture project on my git repo