@@ -1,3 +1,50 @@
 # AtlasVenture
-### _Making Geography fun_
-AtlasVenture is a game to learn and test your geography knowledge. It uses the captivating nature of gaming to promote learning by acting as a link between the dynamic world we live in and the complex knowledge we aspire to acquire. Our game takes advantage of the new opportunities that digital media presents to combine learning and entertainment, providing a stimulating and educational experience. Players are invited into an interactive environment that goes beyond traditional learning methods, using gamification to heighten motivation, focus, and retention of information.
+### _Making Geography Fun_
+
+**AtlasVenture** is an educational geography game developed by **Team 43** as part of the CS2212 course at Western University (Winter 2024). The game uses interactive challenges, a regulated hint system, and gamified learning mechanics to help players engage with world geography in a fun and motivating way.
+
+[Demo Video](https://youtu.be/bUrt07R4wm8?si=elXO-OCSTZboLpw2)
+
+---
+
+## 👥 Team 43
+
+- **Nikunj Pareshkumar Patel**
+- **Ali Mohamed**
+- **Het Patel**
+- **Prabnoor Singh Multani**
+- **Humzah Zahid Malik**
+
+---
+
+## ⚙️ Technologies Used
+
+- Java (JDK 21, Preview Features)
+- Java Swing / AWT
+- JSON (custom levels and game data)
+- Launch4j (for Windows `.exe` generation)
+
+---
+
+## 🕹️ Features
+
+- Interactive geography challenges
+- Custom hint system for learning support
+- Audio effects and background music
+- Polished UI with engaging visuals
+- Unit and system testing for reliability
+
+---
+
+## 🚀 How to Run
+
+### 🧪 Requirements
+
+- Java 21+ (preview features enabled)
+- macOS, Linux, or Windows
+
+### 📦 To Run with `.jar` (prebuilt):
+
+```bash
+cd Geo
+java --enable-preview -jar Geo.jar
